cmake_minimum_required(VERSION 3.14)
project(C)

set(CMAKE_CXX_STANDARD 14)

add_executable(C main.cpp 101.SymmetricTree/Solution.cpp 148.SortList/Solution.cpp 406.QueueReconstruction/Solution.cpp 1041.IsRobotStuck/Solution.cpp 167.TwoSum2/Solution.cpp 513.FindButtomTree/Solution.cpp 150.EvaluatePolish/Solution.cpp 438.FindAllAnagrams/Solution.cpp homework1/q23.cpp homework1/q24.cpp homework1/q27.cpp homework1/q32.cpp homework1/q34.cpp homework1/q35.cpp homework1/q36.cpp homework1/q38.cpp homework1/q39.cpp homework1/LongestPali.cpp 740.DeleteAndEarn/Solution.cpp 419.CountBattleShips/Solution.cpp)